@@ -6,10 +6,12 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class StreamAPI {
+	
+	//抄Scala 
 	public static void testString(String ... numbers) {
 		  List<String> l = Arrays.asList(numbers);
 	        //大数据通过多核并行处理
-		  Stream s=  ((Stream) l.stream().sequential());
+		  	Stream<String> s=    l.stream().sequential();
 		  
 	        List<Integer> r = l.stream() //Stream<Integer> ,中间方法永远返回的是Stream
 	                .map(e -> Integer.parseInt(e))//要求Function接口(是被 @FunctionalInterface),-> 是apply方法
@@ -22,9 +24,15 @@ public class StreamAPI {
         List<Integer> l = Arrays.asList(numbers);
         //大数据通过多核并行处理
         List<Integer> r = l.stream() //Stream<Integer> ,中间方法永远返回的是Stream
-                .map(e -> new Integer(e))//要求Function接口(是被 @FunctionalInterface),-> 是apply方法
+                .map(e -> Integer.valueOf(e))//要求Function接口(是被 @FunctionalInterface),-> 是apply方法
                 .filter(e -> e > 2)
                 .distinct()
+//                .anyMatch(predicate)
+//                .allMatch(predicate)
+//                .noneMatch(predicate)
+//                .sorted()
+//                .count()
+//               .reduce(accumulator)
                 .collect(Collectors.toList());
         System.out.println("testInt result is: " + r);
     }
